<resources>
    <string name="app_name">JustDo App</string>
    <string name="my_name">My Name</string>
    <string name="hello_text">Hello!</string>
    <string name="search_medical">search medical</string>
    <string name="category_design">Design</string>
    <string name="category_meeting">Meeting</string>
    <string name="category_learning">Learning</string>
    <string name="category_text">Category</string>
    <string name="number_of_task_text">5</string>
    <string name="task_text">Task</string>
    <string name="today_s_task_text">Today\'s Task</string>
    <string name="task_description_text_hint">Task Description</string>

    <string name="create_new_task_text">Create New Task</string>
    <string name="save_task">Save Task</string>

    <string name="add_new_task_text">Add New Task</string>
    <string name="edit_task_text">Edit Task</string>
    <string name="design_tasks_text">Design Tasks</string>

    <string name="alert_dialog_title">Discard edit</string>
</resources>