<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hello_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_text"
                android:textSize="22sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/hello_tv"
                app:layout_constraintStart_toStartOf="@id/guidelineStart" />

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar_outline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/search_medical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_tv"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_text"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/search_bar_outline"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                android:layout_marginTop="24dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/category_tv" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05109489" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:background="@drawable/background_bottom_sheet"
            android:elevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/lineUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line_up"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/todayTask_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/today_s_task_text"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lineUp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/todayTask_rv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="24dp"
                    app:layout_constraintTop_toBottomOf="@id/todayTask_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/addButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:elevation="4dp"
                    android:src="@drawable/plus_icon"
                    android:background="@drawable/background_add_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/todayTask_rv"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/lineDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line_down"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/addButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>





    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>