<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="135dp"
        android:layout_height="170dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            android:background="@drawable/design_backgeound">

            <ImageView
                android:id="@+id/category_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fa_paint"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/category_design"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/category_img"
                app:layout_constraintTop_toBottomOf="@id/category_img" />

            <LinearLayout
                android:id="@+id/task_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/category_name"
                app:layout_constraintStart_toStartOf="@id/category_name"
                app:layout_constraintEnd_toEndOf="@id/category_name">

                <ImageView
                    android:id="@+id/dot_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/carbon_dot"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/numberOfTask_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_task_text"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="4dp"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/task_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_text"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="4dp"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iconPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons_plus"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/task_layout"
                app:layout_constraintStart_toStartOf="@id/task_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>