<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.AddTaskActivity"
        android:background="@drawable/app_theme">

        <TextView
            android:id="@+id/addNewTask_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/add_new_task_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/addNewTask_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            android:background="@drawable/background_bottom_sheet">

            <ImageView
                android:id="@+id/lineUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line_up"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/taskTitle_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="Title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/lineUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskTitle_outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="6dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/taskTitle_tv"
                app:layout_constraintStart_toStartOf="@+id/taskTitle_tv"
                app:layout_constraintTop_toBottomOf="@+id/taskTitle_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskTitle_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="Title"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:paddingTop="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/taskDate_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Due Date"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/taskTitle_outline"
                app:layout_constraintStart_toStartOf="@id/taskTitle_outline"
                app:layout_constraintEnd_toEndOf="@id/taskTitle_outline" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskDate_outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="6dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/taskDate_tv"
                app:layout_constraintStart_toStartOf="@+id/taskDate_tv"
                app:layout_constraintTop_toBottomOf="@+id/taskDate_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskDate_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:paddingTop="4dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/baseline_date_range_24"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/category_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/category_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/taskDate_outline"
                app:layout_constraintStart_toStartOf="@+id/taskDate_outline"
                app:layout_constraintTop_toBottomOf="@id/taskDate_outline" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:padding="8dp"
                app:singleSelection="true"
                app:layout_constraintEnd_toEndOf="@+id/category_tv"
                app:layout_constraintStart_toStartOf="@+id/category_tv"
                app:layout_constraintTop_toBottomOf="@id/category_tv">

                <com.google.android.material.chip.Chip
                    android:id="@+id/designChep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/category_design"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipBackgroundColor="@color/gray_light"
                    app:checkedIconTint="@color/purple"
                    android:textSize="20sp"
                    app:chipStrokeColor="@color/gray_light"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/learningChip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipBackgroundColor="@color/gray_light"
                    android:layout_marginStart="8dp"
                    android:text="@string/category_learning"
                    app:checkedIconTint="@color/purple"
                    android:textSize="20sp"
                    app:chipStrokeColor="@color/gray_light"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/meetingChip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipBackgroundColor="@color/gray_light"
                    android:layout_marginStart="8dp"
                    android:text="@string/category_meeting"
                    app:checkedIconTint="@color/purple"
                    android:textSize="20sp"
                    app:chipStrokeColor="@color/gray_light"/>
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/taskDescription_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"
                app:layout_constraintStart_toStartOf="@id/chipGroup"
                app:layout_constraintEnd_toEndOf="@id/chipGroup" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskDescription_outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="6dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:layout_constraintEnd_toEndOf="@id/taskDescription_tv"
                app:layout_constraintStart_toStartOf="@+id/taskDescription_tv"
                app:layout_constraintTop_toBottomOf="@+id/taskDescription_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskDescription_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:hint="Description"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:paddingTop="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createNewTaskBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/taskDescription_outline"
                app:layout_constraintStart_toStartOf="@id/taskDescription_outline"
                app:layout_constraintEnd_toEndOf="@id/taskDescription_outline"
                android:text="Create New Task"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/background_add_button"
                android:layout_marginTop="24dp" />

            <ImageView
                android:id="@+id/lineDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line_down"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>